--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -6,16 +6,16 @@
 
     <!-- Welcome screen / main sections -->
     <string name="welcome">ברוכים הבאים ל <b>התקנת Xposed</b>!\nאנא בחרו מה ברצונכם לעשות:</string>
-    <string name="tabInstall">מערכת</string>
-    <string name="tabInstallDescription">פה אתה יכול לנהל את מערכת Xposed, שדרושה לכל המודולים.</string>
+    <string name="tabInstall">סביבה</string>
+    <string name="tabInstallDescription">פה אתה יכול לנהל את סביבת Xposed, שדרושה לכל המודולים.</string>
     <string name="tabModules">מודולים</string>
-    <string name="tabModulesDescription">המערכת עצמה אינה מוסיפה שום פונקציה. יש צורך במודולים בשביל זה. בחלק זה תוכל להפעיל מודולים שהתקנת.</string>
+    <string name="tabModulesDescription">הסביבה עצמה אינה מוסיפה שום פונקציה. יש צורך במודולים בשביל זה. בחלק זה תוכל להפעיל מודולים שהתקנת.</string>
     <string name="tabDownload">הורדה</string>
     <string name="tabDownloadDescription">חלק זה נותן לך גישה למאגר של מודולים, כדי שתוכל לחפש ולהתקין אותם, ולשמור עליהם מעודכנים.</string>
-    <string name="welcome_framework_update_available">עדכון למערכת Xposed זמין.</string>
+    <string name="welcome_framework_update_available">עדכון לסביבת Xposed זמין.</string>
     <string name="welcome_update_available">קיים עדכון למודול אחד או יותר.</string>
     <string name="tabSettings">הגדרות</string>
-    <string name="tabSettingsDescription">עבור לחלק זה כדי להגיד את מערכת Xposed ואת אפליקציה זו.</string>
+    <string name="tabSettingsDescription">עבור לחלק זה כדי להגיד את סביבת Xposed ואת אפליקציה זו.</string>
     <string name="tabAbout">אודות</string>
     <string name="tabAboutDescription">למד על האנשים אשר יצרו את Xposed, איפה לקבל תמיכה על אפליקציה זו ועוד.</string>
 
@@ -25,7 +25,7 @@
     <string name="installedVersion">פעיל</string>
     <string name="none">---</string>
     <string name="latestVersion">כלול</string>
-    <string name="cleanup">ניקוי (הסרה מלאה של המערכת)</string>
+    <string name="cleanup">ניקוי (הסרה מלאה של הסביבה)</string>
     <string name="versions">גרסאות:</string>
     <string name="soft_reboot">הפעלה מחדש מהירה</string>
     <string name="reboot">הפעלה מחדש</string>
@@ -39,8 +39,8 @@
     <string name="module_no_ui">מודול זה לא מספק ממשק משתמש</string>
     <string name="no_xposed_modules_found">לא נמצאו מודולים!</string>
     <string name="xposed_module_list_updated">רשימת המודולים עודכנה\nהשינויים יחולו לאחר הפעלה מחדש</string>
-    <string name="warning_xposed_min_version">מודול זה דורש גרסה עדכנית יותר של מערכת Xposed (%s) ולכן לא יכולה להיות מופעלת.</string>
-    <string name="no_min_version_specified">מודול זה אינו מספק את גרסת מערכת Xposed שהוא צריך.</string>
+    <string name="warning_xposed_min_version">מודול זה דורש גרסה עדכנית יותר של סביבת Xposed (%s) ולכן לא ניתן להפעילו.</string>
+    <string name="no_min_version_specified">מודול זה אינו מספק את הגרסה של סביבת Xposed שהוא צריך.</string>
     <string name="warning_min_version_too_low">מודול זה פותח עבור Xposed בגרסה %1$s, אבל בעקרבות שינויים בגרסה %2$s, הוא בוטל.</string>
 
     <!-- Download tab -->
@@ -51,13 +51,13 @@
     <string name="download_author">על ידי %s</string>
     <string name="download_unknown_author">מפתח לא ידוע</string>
     <string name="download_status_installed">מותקו (גרסה %s)</string>
-    <string name="download_status_update_available">עדכון זמין (גרסה %1$s \u2192 %2$s)</string>
+    <string name="download_status_update_available">עדכון זמין (גרסה %1$s \u2190 %2$s)</string>
     <string name="download_timestamps">נוסף ב %1$s \u00b7 עדוכן ב %2$s</string>
     <string name="download_sorting_title">מיין לפי</string>
     <string name="download_sorting_status">מיין לפי סטטוס</string>
     <string name="download_sorting_updated">מיין לפי עדכון אחרון</string>
     <string name="download_sorting_created">מיין לפי תאריך יצירה</string>
-    <string name="download_section_framework">מערכת</string>
+    <string name="download_section_framework">סביבת</string>
     <string name="download_section_update_available">עדכון זמין</string>
     <string name="download_section_installed">מותקן</string>
     <string name="download_section_not_installed">לא מותקן</string>
@@ -65,6 +65,14 @@
     <string name="download_section_7d">7 ימים אחרונים</string>
     <string name="download_section_30d">30 ימים אחרונים</string>
     <string name="download_section_older">לפני יותר מ30 ימים</string>
+
+    <!-- Settings tab -->
+    <string name="settings_group_download">הורדות</string>
+    <string name="settings_enable_downloads">אפשר הורדות</string>
+    <string name="settings_enable_downloads_summary">מאפשר לאפליקצייה לבדוק ולעדכן מודולים</string>
+    <string name="settings_group_experimental">ניסיוני</string>
+    <string name="settings_use_armv5">ניסוי ביצועים</string>
+    <string name="settings_use_armv5_summary">אם הינך מאפשר זאת, הביצועים של המערכת שלך יכולים להשתפר, לגרוע או להישאר זהים. הרגישו חופשי לנסות  ולדווח לי את התוצאות (אם יש). אתה צריך להתקין מחדש את הסביבה ולהפעיל מחדש את המכשיר כדי להחיל את השינויים.</string>
 
     <!-- About tab -->
     <string name="about_developers_label">מפתחים ראשיים:</string>
@@ -75,7 +83,7 @@
     <string name="about_version_label">גרסה של אפליקצייה זו:</string>
     <string name="about_source_label">קוד מקור:</string>
     <string name="about_support_label">קבל תמיכה ב:</string>
-    <string name="about_support_warning">לינק זה הוא למתקין ולמערכת <b>בלבד</b>! אם הינך צריך עזרה במודול כלשהו, <b>אל</b> תשתמש בו, אלא פנה למפתח המודול.</string>
+    <string name="about_support_warning">לינק זה הוא למתקין ולסביבה <b>בלבד</b>! אם הינך צריך עזרה במודול כלשהו, <b>אל</b> תשתמש בו, אלא פנה למפתח המודול.</string>
     <string name="about_libraries_label">סיפריות בשימוש:</string>
 
     <!-- DownloadView -->
@@ -83,7 +91,7 @@
     <string name="download_view_install">התקן</string>
     <string name="download_view_cancel">ביטול</string>
     <string name="download_view_no_url">לינק להורדה אינו זמין</string>
-    <string name="download_view_running">ההורדה מתבצעת (%1$,d of %2$,d kB)</string>
+    <string name="download_view_running">ההורדה מתבצעת (%1$,d מתוך %2$,d kB)</string>
     <string name="download_view_waiting">ההורדה ממתינה</string>
     <string name="download_view_successful">ההורדה הושלמה</string>
     <string name="download_view_failed">ההורדה נכשלה (שגיאה %d)</string>
