minor correction for Catalan translation

--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -77,7 +77,7 @@
     <!-- About tab -->
     <string name="about_developers_label">Desenvolupadors principals:</string>
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> i <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
-    <string name="about_developers_warning">Per favor <b>no</b> es posi en contacte amb nosaltres directament per obtenir suport, utilici el seguent enllac.</string>
+    <string name="about_developers_warning">Per favor <b>no</b> es posi en contacte amb nosaltres directament per obtenir suport, utilici el seguent enllaç.</string>
     <string name="about_translator_label">Traductor:</string>
     <string name="translator">David_Vaz</string>
     <string name="about_version_label">Versió d\'aquesta aplicació:</string>
